# open_manipulator_tc

./: notas.sh
assem_moveit_config/: CMakeLists.txt  package.xml
assem_moveit_config/config/: assem_urdf10_description.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
assem_moveit_config/launch/: assem_planning_execution.launch  assem_urdf10_description_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
assem_urdf10_description/: CMakeLists.txt  package.xml
assem_urdf10_description/config/: traj_controller.yaml  trajectory_controller.yaml
assem_urdf10_description/launch/: clarkson_om_gazebo.launch  clarkson_om_gazebo_realmodel.launch  display.launch  gazebo.launch  trajectory_controller.launch
assem_urdf10_description/meshes/: base_link.STL  grip_link.STL  grip_link_sub.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
assem_urdf10_description/urdf/: assem_urdf10_good.gazebo.xacro  assem_urdf10_good.urdf.xacro  assem_urdf10_good_mod.gazebo.xacro  assem_urdf10_good_mod.urdf.xacro  assem_urdf10_mod.gazebo.xacro  assem_urdf10_mod.urdf.xacro
assem_urdf10_description/worlds/: empty_kinect.world
dynamixel-workbench/dynamixel_workbench_controllers/launch/: position_control.launch
dynamixel_position_controller/: CMakeLists.txt  package.xml
dynamixel_position_controller/launch/: position_control.launch
dynamixel_trajectory_action/: CMakeLists.txt  package.xml
dynamixel_trajectory_action/include/dynamixel_trajectory_action/: gripper_commander.h
dynamixel_trajectory_action/launch/: controller_launch.launch
dynamixel_trajectory_action/src/: gripper_commander.cpp  trajectory_server.cpp
open_manipulator_core/: CMakeLists.txt
open_manipulator_core/include/open_manipulator_core/: debug_pos_controller.h  gripper_commander.h  trajectory_server.hpp
open_manipulator_core/launch/: controller_launch.launch  debug_position_controller.launch  pid_setup.launch  position_control.launch  single_manager.launch
open_manipulator_core/src/: debug_pos_controller.cpp  gripper_commander.cpp  pid_setup.cpp  trajectory_server.cpp
open_manipulator_moveit_config/: CMakeLists.txt  package.xml  planning_request_adapters_plugin_description.xml
open_manipulator_moveit_config/config/: controllers.yaml  joint_limits.yaml  ompl_planning.yaml  open_manipulator_support.srdf
open_manipulator_moveit_config/launch/: moveit.rviz  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch
open_manipulator_support/: CMakeLists.txt  package.xml
open_manipulator_support/config/: joint_names.yaml
open_manipulator_support/meshes/: base_link.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
open_manipulator_support/urdf/: open_manipulator_support.urdf.xacro
open_manipulator_support_description/: CMakeLists.txt  package.xml
open_manipulator_support_description/launch/: spawn_open_manipulator.launch  spawn_urdf.launch
open_manipulator_support_description/meshes/: gripper.STL  link7.STL
open_manipulator_support_description/urdf/: open_manipulator.gazebo.xacro  open_manipulator_support.urdf.xacro
